# custom_detector_example

./: Cargo.toml  aderynbot.toml  bot_id.txt
metadata/: custom_bots.json
src/: config_tests.rs  lib.rs  main.rs  runner.rs  unindexed_events.rs  unsafe_detector.rs
src/bot_brain/: custom_detectors.rs  mod.rs
src/bot_utils/: mod.rs
src/unindexed_events/: detector.rs  mod.rs
src/unspecific_solidity_pragma/: detector.rs
