[package]
name = "custom_detector_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
aderyn_driver = { git = "https://github.com/TilakMaddy/aderyn",  branch = "feature/spin-out-detectors"  }
#aderyn_driver = { path  = "../aderyn/aderyn_driver" }
